--- a/static/src/pug/home/index.pug
+++ b/static/src/pug/home/index.pug
@@ -1,6 +1,8 @@
 doctype html
 html
   head
+    meta( charset='utf8' )
+    meta( name='viewport', content='width=device-width, initial-scale=1' )
     link(rel='stylesheet', type='text/css', href=`/css/home/index.css`)
     title ncku csie
   body
