--- a/static/src/sass/components/common/_header.scss
+++ b/static/src/sass/components/common/_header.scss
@@ -1,220 +1,241 @@
-@import 'components/common/reset';
-@import 'components/common/nav';
-
-$pc-media: 960px;
-$phone-media: 480px;
-@mixin pc () {
-  @media all and ( min-width: $pc-media ) {
+$header-pc-size: 960px;
+$header-phone-size: 480px;
+@mixin header-pc () {
+  @media screen and ( min-width: $header-pc-size ) {
     @content;
   }
 }
-@mixin phone () {
-  @media all and ( max-width: $phone-media ) {
+@mixin header-phone () {
+  @media screen and ( max-width: $header-phone-size ) {
     @content;
   }
 }
 @mixin header () {
   .header {
     $font-color: #f8f8f2;
-    grid-template: {
-      rows: .25fr .25fr .25fr .25fr ;
-      columns: .03fr .5fr .5fr;
-      areas: 
-      '. . search'
-      'img title1 user'
-      'img title2 user'
-      '. navbar navbar';
-    }
-    display: grid;
-    
     background-color: #262e3e;
     padding: 0;
-    /*@include pc() {*/
-      width: 100%;
-      height: 25%;
-      /*grid-template {
-        rows: .25fr .25fr .25fr .25fr ;
-        columns: .2fr .5fr .5fr;
-      }
-    }*/
-    /*@include phone() {
-      width: 375px;
+    width: 100%;
+    @include header-phone() {
       height: 78px;
-      grid-template {
+      display: grid;
+      grid-template: {
         rows: .5fr .5fr;
         columns: .7fr .15fr .15fr;
+        areas:
+        'title1 search navbtn'
+        'title2 . .';
       }
-    }*/
+    }
+    @include header-pc () {
+      height: 25%;
+      display: grid;
+      grid-template: {
+        rows: .25fr .25fr .25fr .25fr ;
+        columns: .03fr .5fr .5fr;
+        areas: 
+        '. . search'
+        'img title1 user'
+        'img title2 user'
+        '. navbar navbar';
+      }
+    }
 
     &__img {
-      /* @include phone() {
-         display: none;
-         border: 100px solid red;
-       }*/
-       /*@include pc() {*/
-      //display: grid;
-      grid-area: img;
-      //align-self: center;
-      //justify-self: start;
-      width: 80px;
-      height: 72px;
-      padding-top: 3.5rem;
-      margin-right: 10px;
-      margin-left: 30px;
-      background: $font-color ;
-      border-radius: 50%;
-       //}
+      @include header-phone() {
+        display: none;
+      }
+      @include header-pc() {
+        display: grid;
+        grid-area: img;
+        width: 80px;
+        height: 72px;
+        padding-top: 3.5rem;
+        margin-right: 10px;
+        margin-left: 30px;
+        background: $font-color ;
+        border-radius: 50%;
+        }
     }
    
     &__ChineseTitle {
-        //@include pc() {
-      grid-area: title1;
-      font-size: 1rem;
-        //}
-        /*@include phone() {
-          grid-row: 1;
-          grid-column: 1;
-          font-size: 18px;
-        }*/
       font-weight: normal;
       color: $font-color ;
+      @include header-phone() {
+        padding-top: 20px;
+        grid-area: title1;
+        font-size: 18px;
+        font-family: Arial, Regular;
+      }
+      @include header-pc() {
+        grid-area: title1;
+        font-size: 1rem;
+      }
       //justify-self: start;
       //align-self: end;
     }
    
     &__EnglishTitle{
-       //@include pc() {
-      grid-area: title2;
-      font-size: .7rem;
-       //}
-       /*@include phone() {
-         grid-row: 2;
-         grid-column: 1;
-         font-size: 9px;
-       }*/
       color: $font-color ;
+      @include header-phone() {
+        grid-area: title2;
+        font-size: 9px;
+        font-family: Arial, Regular;
+      }
+      @include header-pc() {
+        grid-area: title2;
+        font-size: .7rem;
+      }
       //justify-self: start;
     }
    
     &__input {
-       //@include pc() {
-      //display: block;
-      grid-area: search;
-      width: 406px;
-      height: 48px;
-      background-color: rgba(0, 0, 0, 0);
-      margin-right: 3rem;
-      margin-top: .5rem;
-      border: .5px solid #f8f8f2;
-      border-radius: .5rem;
-      padding: 5px;
-      color: #f8f8f2;
-      font-size: .4rem;
-      outline: none;
-      //justify-self: end;
-   
-      &::placeholder {
-        color: #f8f8f2;
-        font-size: 21px;
-        font-family: Arial, Regular;
+      @include header-phone() {
+        display: block;
+        grid-area: search ;
+        width: 21.21px;
+        height: 20.01px;
+        border-radius: 50%;
+        position: relative;
+        top:30px;
       }
-       //}
-       /*@include phone() {
-         display: none;
-       }*/
+      @include header-pc() {
+        display: block;
+        grid-area: search;
+        width: 406px;
+        height: 48px;
+        background-color: rgba(0, 0, 0, 0);
+        margin-right: 3rem;
+        margin-top: .5rem;
+        border: 1px solid #f8f8f2;
+        border-radius: .5rem;
+        padding: 5px;
+        color: #f8f8f2;
+        font-size: .4rem;
+        outline: none;
+        justify-self: end;
+    
+        &::placeholder {
+          color: #f8f8f2;
+          font-size: 21px;
+          font-family: Arial, Regular;
+        }
+      }
     }
    
     &__user{
-       //@include pc() {
-      //display: block;
-      font-size: 10px;
-      color: $font-color ;
-      grid-area: user;
-       //}
-       /*@include phone() {
-         display: none;
-         grid {
-           row: 1;
-           column: 3;
-         }*/
+      @include header-phone() {
+        display: none;
+      }
+      @include header-pc() {
+        display: block;
+        justify-self: end;
+        font-size: 30px;
+        color: $font-color ;
+        grid-area: user;
+      }
     }
     .dropdown{
-        //@include pc() {
-      grid-area: navbar;
-      list-style-type: none;
-      overflow: hidden;
-      margin: 0;
-      padding: 0;
-      color: #f8f8f2 ;
-      background-color: rgba(0, 0, 0, 0);
-        //}
-        /*@include phone() {
-          display: none;
-        }*/
       font-size: 24px;
+
+      @include header-phone() {
+        grid-area: navbtn ;
+        width: 21.21px;
+        height: 20.01px;
+        border-radius: 50%;
+        position: relative;
+        top:30px;
+
+        &__navbar{
+          display: inline-block;
+
+          &:active {
+            .dropdown__content {
+              display:block ;
+            }
+          }
+        }
+
+        &__content{
+          display: none;
+          width: 100%;
+          height: 100%;
+          background-color: #262e3e ;
+
+          a{
+            color: #f8f8f2 ;
+            padding: 9px 9px 9px 9px ;
+            font-size: 18px;
+            font-family: Arial, Regular;
+            
+          }
+        }
+      }
+      @include header-pc() {
+        grid-area: navbar;
+        width:100%;
+        list-style-type: none;
+        overflow: hidden;
+        margin: 0;
+        padding: 0;
+        color: #f8f8f2 ;
+        background-color: rgba(0, 0, 0, 0);
       
-      li{
-        float:right ;
-      }
-    }
-    
-    &__navbar{
-      display: inline-block;
-      z-index: 3;
-
-      &:hover {
-        .header__btn{
-          border-bottom: 5px;
-          border-color: #00c3d0 ;
+        li{
+          float:right ;
         }
-      }
-    }
+      
+        &__navbar{
+          display: inline-block;
 
-    &__btn {
-      width: 154px;
-      height: 43px;
-      display: inline-block;
-      color: white;
-      text-align: center;
-      padding: 14px 16px 0 0;
-      text-decoration: none;
-      z-index: 2;
-
-      &:hover {
-        .dropdown__content {
-          display:block ;
+          &:hover {
+            .dropdown__content {
+              display:block ;
+            }
+          }
         }
-      }
-    }
-    
-    &__content{
-        //@include pc() {
-      display: none;
-      width: 1920px;
-      height: 52px;
-      background-color: #00c3d0;
-      white-space: nowrap;
-      position: absolute;
-      right: 0;
-      box-shadow: 0 8px 16px 0 rgba(0,0,0,.2);
-      z-index: 1;
-    
-      a{
-        color: white;
-        padding: 9px 20px;
-        text-decoration: none;
-        display: inline;
-        text-align: center;
-        font-family: Arial, Regular;
 
-        &:hover{
-          background: #008891 ;
+        &__btn {
+          width: 154px;
+          height: 43px;
+          display: inline-block;
+          color: white;
+          text-align: center;
+          padding: 14px 16px 0 0;
+          text-decoration: none;
+
+          &:hover {
+              border-bottom: 10px;
+              border-color: #00c3d0 ;
+            }
         }
-      }
-        //}
-          /*@include phone() {
+        
+        &__content{
             display: none;
-          }*/
+            width:100%;
+            height: 52px;
+            background-color: #00c3d0;
+            white-space: nowrap;
+            position: absolute;
+            right: 0;
+            box-shadow: 0 8px 8px 0 rgba(0,0,0,.2);
+            z-index: 1;
+          
+            a{
+              color: white;
+              padding: 10px 10px;
+              text-decoration: none;
+              float: right;
+              text-align: center;
+              font-family: Arial, Regular;
+              font-size: 24px;
+
+              &:hover{
+                background: #008891 ;
+              }
+            }
+        }
+      }
     }
   }
 }
