--- a/static/src/sass/home/index.scss
+++ b/static/src/sass/home/index.scss
@@ -1,9 +1,8 @@
 @import 'components/common/reset';
 @import 'components/common/header';
-@import 'components/common/footer';
+//@import 'components/common/footer';
 
 body {
-  height: 100%;
   background: red;
 }
 @include header();
